# proxy/docs/swagger.json
@@ -373,10 +373,14 @@
             "type": "object",
             "properties": {
                 "lat": {
-                    "type": "number"
+                    "type": "number",
+                    "maximum": 90,
+                    "minimum": -90
                 },
                 "lng": {
-                    "type": "number"
+                    "type": "number",
+                    "maximum": 180,
+                    "minimum": -180
                 },
                 "value": {
                     "type": "string"
@@ -385,6 +389,10 @@
         },
         "models.AuthRequest": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string",
@@ -392,6 +400,7 @@
                 },
                 "password": {
                     "type": "string",
+                    "minLength": 8,
                     "example": "qwerty123"
                 }
             }
@@ -423,13 +432,21 @@
         },
         "models.GeoGeocodeRequest": {
             "type": "object",
+            "required": [
+                "lat",
+                "lng"
+            ],
             "properties": {
                 "lat": {
                     "type": "string",
+                    "maxLength": 90,
+                    "minLength": -90,
                     "example": "55.7558"
                 },
                 "lng": {
                     "type": "string",
+                    "maxLength": 180,
+                    "minLength": -180,
                     "example": "37.6173"
                 }
             }
@@ -447,6 +464,9 @@
         },
         "models.GeoSearchRequest": {
             "type": "object",
+            "required": [
+                "query"
+            ],
             "properties": {
                 "query": {
                     "type": "string",
@@ -458,10 +478,13 @@
             "type": "object",
             "properties": {
                 "limit": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 100,
+                    "minimum": 1
                 },
                 "offset": {
-                    "type": "integer"
+                    "type": "integer",
+                    "minimum": 0
                 },
                 "total_count": {
                     "type": "integer"
@@ -476,6 +499,9 @@
         },
         "models.UserResponse": {
             "type": "object",
+            "required": [
+                "id"
+            ],
             "properties": {
                 "created_at": {
                     "type": "string"
